[package]
name = "percentum"
version = "0.0.2"
authors = ["Clark Moody <clark@clarkmoody.com>"]
edition = "2024"
description = "Percentage type sanity"
license = "MIT"
repository = "https://github.com/clarkmoody/percentum"

[features]
default = []
decimal = ["rust_decimal"]

[dependencies]
rust_decimal = { version = "1.36", optional = true }
