[package]
name = "percentum"
version = "0.0.6"
authors = ["Clark Moody <clark@clarkmoody.com>"]
edition = "2024"
description = "Percentage type sanity"
license = "MIT"
repository = "https://github.com/clarkmoody/percentum"

[features]
default = []
decimal = ["rust_decimal"]
serde = ["dep:serde", "serde_json"]

[dependencies]
rust_decimal = { version = "1.36", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
